--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="icons/favicon.ico" />
+    <link rel="icon" href="https://i.imgur.com/3g0s5s7.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#0D47A1" />
-    <link rel="apple-touch-icon" href="icons/icon-192x192.png">
-    <link rel="manifest" href="manifest.json" />
+    <link rel="apple-touch-icon" href="https://i.imgur.com/p1h4G3d.png">
+    <link rel="manifest" href="./manifest.json" />
     <title>Registro Ore Lavorative</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -939,7 +939,7 @@ root.render(React.createElement(React.StrictMode, null, React.createElement(App)
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          navigator.serviceWorker.register('sw.js').then(registration => {
+          navigator.serviceWorker.register('./sw.js', { scope: '.' }).then(registration => {
             console.log('SW registered: ', registration);
           }).catch(registrationError => {
             console.log('SW registration failed: ', registrationError);
